--- a/zuul-proxy-server.yml
+++ b/zuul-proxy-server.yml
@@ -2,7 +2,7 @@ zuul:
   routes:
     greetings:
       path: /greeting/**
-      serviceId: GREETING-SERVICE
+      serviceId: greeting-service
       stripPrefix: false
 eureka:
   client:
