--- a/greeting-service.yml
+++ b/greeting-service.yml
@@ -1,5 +1,5 @@
 # Discovery Server Access
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+spring:
+  cloud:
+    config:
+      name: common-service-properties
