--- a/auth-config-server.yml
+++ b/auth-config-server.yml
@@ -8,7 +8,7 @@ spring:
     show-sql: true
     hibernate:
      dialect: org.hibernate.dialect.SQLServer2012Dialect
-     ddl-auto: create-drop
+     ddl-auto: none
 server:
   port: ${PORT:0}
 eureka:
