--- a/greeting-service.yml
+++ b/greeting-service.yml
@@ -3,7 +3,7 @@ spring:
   application:
     sign-in-key: 'diego'
 server:
-  port: ${PORT}
+  port: ${PORT:0}
 eureka:
   instance:
     hostname: localhost
