--- a/zuul-proxy-server.yml
+++ b/zuul-proxy-server.yml
@@ -11,6 +11,10 @@ zuul:
       path: /authorization/**
       serviceId: auth-config-server
       stripPrefix: true
+    cypher:
+      path: /cypher/**
+      serviceId: SERVICE-CYPHER
+      stripPrefix: true
 eureka:
   client:
     registerWithEureka: false
