add common config

--- a/common-service-props.yml
+++ b/common-service-props.yml
@@ -2,10 +2,9 @@
 spring:
   application:
     sign-in-key: 'diego'
-server:
-  port: ${PORT:0}
 eureka:
   instance:
+    leaseRenewalIntervalInSeconds: 5
     hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
