--- a/common-service-props.yml
+++ b/common-service-props.yml
@@ -1,5 +1,10 @@
 # Discovery Server Access
 spring.cloud.loadbalancer.ribbon.enabled: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 microservices:
   proxy:
     zuul:
