--- a/common-service-props.yml
+++ b/common-service-props.yml
@@ -10,6 +10,8 @@ microservices:
     zuul:
       url: http://localhost:8080/api/
   config:
+    swagger:
+      isSwaggerEnabled : true
     authentication:
       login:
         header-auth: Basic YWRtaW46MTIzNDU2
