--- a/common-service-props.yml
+++ b/common-service-props.yml
@@ -1,5 +1,8 @@
 # Discovery Server Access
 spring.cloud.loadbalancer.ribbon.enabled: false
+spring:
+  profiles:
+    active: dev, debug
 management:
   endpoints:
     web:
