--- a/zuul-proxy-server.yml
+++ b/zuul-proxy-server.yml
@@ -3,6 +3,10 @@ zuul:
   sensitive-headers: Cookie,Set-Cookie
   prefix: /api
   routes:
+    ms-authentication-service:
+      path: /authentication/**
+      serviceId: app-ms-authentication
+      stripPrefix: false
     greetings:
       path: /greeting/**
       serviceId: greeting-service
