--- a/zuul-proxy-server.yml
+++ b/zuul-proxy-server.yml
@@ -4,7 +4,7 @@ zuul:
   prefix: /api
   routes:
     ms-authentication-service:
-      path: /**
+      path: /app-ms-authentication/**
       serviceId: app-ms-authentication
       stripPrefix: false
     greetings:
