--- a/common-service-props.yml
+++ b/common-service-props.yml
@@ -33,7 +33,7 @@ spring:
 eureka:
   instance:
     leaseRenewalIntervalInSeconds: 5
-    hostname: ip-172-31-24-187.us-east-2.compute.internal
+    #hostname: ip-172-31-24-187.us-east-2.compute.internal
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     serviceUrl:
